# ft_place_bot

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  __main__.py  client_api.py  color_config.py  config.py  exceptions.py  ft_place_bot.spec  image_monitor.py  index.html  kcorp_x_amogus_x_cores_pixelart.json  mkdocs.yml  models.py  output.json  png_to_cores_json.py  pyproject.toml  rexuirements.txt  utils.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/client/: index.html
api/config/: index.html
api/core/: index.html
api/utils/: index.html
ft_place_bot/: __main__.py  config.py  interface.py
ft_place_bot/client/: __init__.py  client_api.py
ft_place_bot/core/: __init__.py  color_config.py  exceptions.py  image_monitor.py  models.py
ft_place_bot/utils/: __init__.py  utils.py
guide/installation/: index.html
guide/usage/: index.html
scripts/: build.py
